# catala-lean

./: .compile_catala_batch_test.sh.swp  .dockerignore  LEAN_BACKEND_TODO.md  cloudbuild.yaml  compile_catala.sh  compile_catala_batch.sh  compile_catala_batch_test.sh  compile_catala_test.sh  run_lean_files.sh
Sara_lean/: CatalaRuntime.lean  Main.lean  README.md  SaraLean.lean  compile_catala_tests.sh  lake-manifest.json  lakefile.toml  trial_5_catala.lean  trial_catala.lean
Sara_lean/SaraLean/: tax_case_1.lean  tax_case_2.lean  test.lean  testcase1.lean
Sara_lean/Stdlib/: Date_en.lean  Date_internal.lean  Decimal_en.lean  List_en.lean  Money_en.lean  Optional.lean  Period_en.lean  Stdlib.lean
Sara_lean/Stdlib_Lean/: Date_en.lean  Date_internal.lean  Decimal_en.lean  List_en.lean  Money_en.lean  Optional.lean  Period_en.lean  Stdlib.lean
build_system/: manpages.sexp
compiler/: dune  tests.ml
compiler/plugins/: dependency_graph.ml  desugared_viz.ml  dune  lean4.ml  lean4_desugared.ml  lean4_desugared_for_catala_tests.ml  lean4_desugared_test.ml
compiler/scopelang/: from_desugared.mli
runtimes/lean/: CatalaRuntime.lean
server/: .dockerignore  Dockerfile  api_server.py  cloudbuild.yaml
tests/catala_test_cases/: sections.catala_en  tax_case_1.catala_en  tax_case_10.catala_en  tax_case_100.catala_en  tax_case_11.catala_en  tax_case_12.catala_en  tax_case_13.catala_en  tax_case_14.catala_en  tax_case_15.catala_en  tax_case_16.catala_en  tax_case_17.catala_en  tax_case_18.catala_en  tax_case_19.catala_en  tax_case_2.catala_en  tax_case_20.catala_en  tax_case_21.catala_en  tax_case_22.catala_en  tax_case_23.catala_en  tax_case_24.catala_en  tax_case_25.catala_en  tax_case_26.catala_en  tax_case_27.catala_en  tax_case_28.catala_en  tax_case_29.catala_en  tax_case_3.catala_en  tax_case_30.catala_en  tax_case_31.catala_en  tax_case_32.catala_en  tax_case_33.catala_en  tax_case_34.catala_en  tax_case_35.catala_en  tax_case_36.catala_en  tax_case_37.catala_en  tax_case_38.catala_en  tax_case_39.catala_en  tax_case_4.catala_en  tax_case_40.catala_en  tax_case_41.catala_en  tax_case_42.catala_en  tax_case_43.catala_en  (+62 more)
tests/catala_test_cases_2/: section_151_scenario_1.catala_en  (+116 more)
tests_sara/: 1.catala_en
(+1 files in other folders)
