(library
 (name python)
 (public_name catala.plugins.python)
 (synopsis
  "Demonstration Catala plugin that reproduces the behaviour of the built-in python backend")
 (modules python)
 (libraries catala.driver))

(library
 (name api_web)
 (public_name catala.plugins.api_web)
 (synopsis "Catala plugin for interaction with a web interface")
 (modules api_web)
 (libraries catala.driver))

(library
 (name json_schema)
 (public_name catala.plugins.json_schema)
 (synopsis "Catala plugin generating JSON schemas useful to build web-forms")
 (modules json_schema)
 (libraries catala.driver))

(library
 (name lazy_interpreter)
 (public_name catala.plugins.lazy-interpreter)
 (synopsis
  "Catala plugin that implements a different, experimental interpreter, featuring lazy and partial evaluation")
 (modules lazy_interp)
 (flags (-linkall))
 (libraries shared_ast catala.driver ocamlgraph))

(library
 (name explain)
 (public_name catala.plugins.explain)
 (synopsis
  "Experiments for the explanation of computations: generates a graph of the formulas that are used for a given execution of a scope")
 (modules explain)
 (flags (-linkall))
 (libraries shared_ast catala.driver ocamlgraph))

(library
 (name lean4)
 (public_name catala.plugins.lean4)
 (synopsis "Catala plugin that generates Lean 4 code")
 (modules lean4)
 (libraries catala.driver))

; TODO: Remove desugared_viz library after development.
(library
 (name desugared_viz)
 (public_name catala.plugins.desugared_viz)
 (synopsis "Catala plugin that visualizes Desugared AST as JSON")
 (modules desugared_viz)
 (libraries catala.driver desugared))

(library
 (name lean4_desugared)
 (public_name catala.plugins.lean4_desugared)
 (synopsis "Catala plugin that generates Lean 4 code from desugared AST")
 (modules lean4_desugared)
 (libraries catala.driver desugared))

(library
 (name lean4_desugared_test)
 (synopsis "Tests for Lean4 desugared backend")
 (modules lean4_desugared_test)
 (libraries lean4_desugared catala.driver desugared alcotest str))

(alias
 (name plugins)
 (deps
  (glob_files *.cmxs)))

(documentation
 (package catala)
 (mld_files plugins))
